--- a/resturant/src/main/resources/templates/admindashboard.html
+++ b/resturant/src/main/resources/templates/admindashboard.html
@@ -21,7 +21,7 @@
 
 <body class="">
   <nav class="navbar navbar-vertical fixed-left navbar-expand-md navbar-light bg-white" id="sidenav-main">
-    <div class="container-fluid">
+    <div class="container-fluid"  >
       <!-- Toggler -->
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#sidenav-collapse-main" aria-controls="sidenav-main" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -112,7 +112,7 @@
         <!-- Navigation -->
         <ul class="navbar-nav">
           <li class="nav-item  active ">
-            <a class="nav-link  active " href="catagorary">
+            <a class="nav-link  active " href="javascript:AccessPages('catagorary')">
               <i class="ni ni-tv-2 text-primary"></i> Create Catagerory
             </a>
           </li>
@@ -131,6 +131,7 @@
       </div>
     </div>
   </nav>
+  <div class="container mt-5 mr-8" style="float: right;"id="main-section"></div>
  
   <!--   Core   -->
   <script src="./assets/js/plugins/jquery/dist/jquery.min.js"></script>
@@ -141,7 +142,22 @@
   <!--   Argon JS   -->
   <script src="./assets/js/argon-dashboard.min.js?v=1.1.2"></script>
   <script src="https://cdn.trackjs.com/agent/v3/latest/t.js"></script>
+  
   <script>
+  function AccessPages(URL) {	
+	
+					$.ajax({
+						url : URL,
+						type : "POST",									
+						success : function(response) {
+							$("#main-section").html(response);
+						},
+						error : function() {
+						}
+					});	
+				}
+
+  
     window.TrackJS &&
       TrackJS.install({
         token: "ee6fab19c5a04ac1a32a645abde4613a",
